@@ -1,6 +1,7 @@
 Version 1.4.2
     * not yet released
     * don't limit speed of loading animation in tabbar
+    * fixed loading HTML5 videos on YouTube
     * fixed saving cursive font in fonts preferences
     * fixed translating edit actions in page context menu
     * fixed connecting to older secured servers by forcing older SSL protocol
